--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     -->
     <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css ">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,6 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>mpartial | - Keep Building</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
